...
import com.github.meeplemeet.ui.FocusableInputField
import com.github.meeplemeet.ui.navigation.NavigationTestTags
import com.github.meeplemeet.ui.theme.AppColors
import com.github.meeplemeet.ui.theme.Dimensions

object SignUpScreenTestTags {
  const val EMAIL_FIELD = "email_field"
  const val PASSWORD_VISIBILITY_TOGGLE = "password_visibility_toggle"
  const val PASSWORD_FIELD = "password_field"
  const val SIGN_UP_BUTTON = "sign_up_button"
  const val GOOGLE_SIGN_UP_BUTTON = "google_sign_up_button"
  const val CONFIRM_PASSWORD_FIELD = "confirm_password_field"
  const val CONFIRM_PASSWORD_VISIBILITY_TOGGLE = "confirm_password_visibility_toggle"
  const val SIGN_IN_BUTTON = "sign_in_button"
}

const val SIGN_UP_TEXT = "Sign Up"
const val HIDE_PWD_TEXT = "Hide password"
const val SHOW_PWD_TEXT = "Show password"
...
